# orchestration-framework

./: .pre-commit-config.yaml  Cargo.toml  CubeQuickstart.ipynb  Dockerfile  Observable Agents Quickstart.ipynb  Quickstart.ipynb  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: pypi.yml
CortexCube/: .gitignore  __init__.py
CortexCube/agents/: agent.py  structured_chat_agent.py  tools.py  types.py
CortexCube/chains/: chain.py  llm_chain.py  llm_math_chain.py
CortexCube/cube/: constants.py  cortex_cube.py  output_parser.py  planner.py  task_fetching_unit.py  task_processor.py
CortexCube/executors/: agent_executor.py  schema.py
CortexCube/tests/: conftest.py  test_quickstart.py
CortexCube/tools/: base.py  logger.py  snowflake_analyst_prompts.py  snowflake_prompts.py  snowflake_tools.py  utils.py
agent_gateway/: __init__.py
agent_gateway/agents/: agent.py  tools.py
agent_gateway/chains/: chain.py  llm_chain.py
agent_gateway/gateway/: gateway.py  output_parser.py  planner.py  task_processor.py
agent_gateway/tools/: __init__.py  base.py  logger.py  snowflake_tools.py  tools.py  utils.py
cube_demo_app/: cube_demo_app.py
demo_app/: demo_app.py
src/: jwt.rs  lib.rs
tests/: conftest.py  test_endpoint_builder.py  test_quickstart.py  test_utils.py
tests/data/: response.json  sql_response.json  sql_response.py
tests/scripts/: 1_setup_objects.sql  2_create_tables.sql  3_create_search_service.sql
wheelhouse/: orchestration_framework-1.0.0-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  orchestration_framework-1.0.0-cp310-cp310-musllinux_1_2_aarch64.whl  orchestration_framework-1.0.0-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  orchestration_framework-1.0.0-cp311-cp311-musllinux_1_2_aarch64.whl  orchestration_framework-1.0.0-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  orchestration_framework-1.0.0-cp312-cp312-musllinux_1_2_aarch64.whl  orchestration_framework-1.0.0-cp313-cp313-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  orchestration_framework-1.0.0-cp313-cp313-musllinux_1_2_aarch64.whl  orchestration_framework-1.0.0-cp39-cp39-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  orchestration_framework-1.0.0-cp39-cp39-musllinux_1_2_aarch64.whl  orchestration_framework-1.0.0-pp310-pypy310_pp73-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  orchestration_framework-1.0.0-pp311-pypy311_pp73-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  orchestration_framework-1.0.0-pp39-pypy39_pp73-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
