[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "xetrocpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "maturin>=1.8.3",
    "snowflake-connector-python>=3.14.0",
    "snowflake-snowpark-python>=1.29.1",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "pre-commit>=4.2.0",
    "ruff>=0.11.1",
]
