[project]
name = "orchestration-framework"
version = "1.0.0"
requires-python = ">=3.9"
description = "A multi-agent framework with native support for Snowflake services"
authors = [
  { name = "Alejandro Herrera", email = "alejandro.herrera@snowflake.com" },
]
maintainers = [
  { name = "Alejandro Herrera", email = "alejandro.herrera@snowflake.com" },
  { name = "Tyler White", email = "tyler.white@snowflake.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "snowflake-snowpark-python[pandas]>=1.22.1,<2.0",
    "asyncio>=3.4.3",
    "pydantic>=2.9.2,<3.0",
    "snowflake>=1.1.0",
]

[project.urls]
Repository = "https://github.com/Snowflake-Labs/orchestration-framework.git"
Issues = "https://github.com/Snowflake-Labs/orchestration-framework/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.1,<5.0",
    "ruff>=0.6.9,<1.0",
    "pytest>=8.3.3,<9.0",
    "coverage>=7.6.9,<8.0",
    "ipython>=8.18.1",
    "maturin>=1.8.3",
]
streamlit = [
    "streamlit>=1.39.0,<2.0",
    "python-dotenv>=1.0.1"
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.cibuildwheel]
before-all = [
    "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y",
    "source $HOME/.cargo/env",
    # Use the correct package manager based on the container
    "if command -v apt-get >/dev/null; then apt-get update && apt-get install -y libssl-dev pkg-config; fi",
    "if command -v dnf >/dev/null; then dnf install -y openssl-devel pkgconfig; fi",
    "if command -v apk >/dev/null; then apk add openssl-dev pkgconfig; fi",
    "if command -v yum >/dev/null; then yum install -y openssl-devel pkgconfig; fi"
]
environment = "PATH=$HOME/.cargo/bin:$PATH"
